--- a/ProyectoQuiniela/src/main/resources/static/index.html
+++ b/ProyectoQuiniela/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 	<title>Pagina </title>
 </head>
 <body>
-	<h2>Test Page</h2>
+	<h2>Test Page Hola</h2>
 	<a href="#">link para la segunda pagina</a>
 </body>
 </html>
