Probando el Mapping

--- a/ProyectoQuiniela/src/main/resources/static/index.html
+++ b/ProyectoQuiniela/src/main/resources/static/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 	<h2>Test Page Hola</h2>
-	<a href="#">link para la segunda pagina</a>
+	<a href="/pag2">link para la segunda pagina</a>
 </body>
 </html>
