--- a/ProyectoQuiniela/src/main/resources/static/pag2.html
+++ b/ProyectoQuiniela/src/main/resources/static/pag2.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 	<h2>Test Page 2</h2>
-	<a href="#">link para la segunda pagina</a>
+	<a href="/">link para la primera pagina</a>
 </body>
 </html>
