--- a/ProyectoQuiniela/src/main/resources/static/index.html
+++ b/ProyectoQuiniela/src/main/resources/static/index.html
@@ -4,6 +4,26 @@
 </head>
 <body>
 	<h2>Test Page Hola</h2>
-	<a href="/pag2">link para la segunda pagina</a>
+	
+	<ul class = menu_princial>
+	<li><a href="/pag2">link para la segunda pagina</a></li>
+	<li><a href="#">Opcion 2</a></li>
+	<li><a href="#">Opcion 3</a></li>
+	<li><a href="#">Opcion 4</a></li>
+	</ul>
+	
+	<h1>Titulo 1</h1>
+	<p>contenido 1</p>
+	<br/>
+	
+	<h2>Titulo 2</h2>
+	<p>contenido 2</p>
+	<br/>
+	
+	<h3>Titulo 3</h3>
+	<p>sidebar</p>
+	<br/>
+	
+	<p>Pie de pagina</p>
 </body>
-</html>
+</html>ml>
