--- a/ProyectoQuiniela/src/main/resources/static/index.html
+++ b/ProyectoQuiniela/src/main/resources/static/index.html
@@ -1,29 +1,34 @@
 <html>
 <head>
-	<title>Pagina </title>
+<link href="webjars/bootstrap/4.1.0/css/bootstrap.min.css"
+	rel="stylesheet">
+<title>Pagina</title>
 </head>
 <body>
 	<h2>Test Page Hola</h2>
-	
-	<ul class = menu_princial>
-	<li><a href="/pag2">link para la segunda pagina</a></li>
-	<li><a href="#">Opcion 2</a></li>
-	<li><a href="#">Opcion 3</a></li>
-	<li><a href="#">Opcion 4</a></li>
+
+	<ul class=menu_princial>
+		<li><a href="/pag2">link para la segunda pagina</a></li>
+		<li><a href="#">Opcion 2</a></li>
+		<li><a href="#">Opcion 3</a></li>
+		<li><a href="#">Opcion 4</a></li>
 	</ul>
-	
+
 	<h1>Titulo 1</h1>
 	<p>contenido 1</p>
-	<br/>
-	
+
 	<h2>Titulo 2</h2>
 	<p>contenido 2</p>
-	<br/>
-	
+	<br />
+
 	<h3>Titulo 3</h3>
 	<p>sidebar</p>
-	<br/>
-	
-	<p>Pie de pagina</p>
+	<br />
+
+<a class="btn btn-warning" href="#">Test</a>
+
 </body>
-</html>ml>
+<script src="webjars/jquery/3.0.0/jquery.min.js"></script>
+<script src="webjars/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+<footer>pie de pagina</footer>
+</html>
