--- a/ProyectoQuiniela/src/main/resources/static/index.html
+++ b/ProyectoQuiniela/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
 <title>Pagina</title>
 </head>
 <body>
-	<h2>Test Page Hola</h2>
+	<h2>Test Page Hola MUNDO</h2>
 
 	<ul class=menu_princial>
 		<li><a href="/pag2">link para la segunda pagina</a></li>
